--- a/webpack1/dynamic-resolve/package.json
+++ b/webpack1/dynamic-resolve/package.json
@@ -7,5 +7,9 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "promisescript": "^1.2.0",
+    "systemjs": "^0.19.29"
   }
 }
