--- a/webpack2/dynamic-resolve/package.json
+++ b/webpack2/dynamic-resolve/package.json
@@ -7,5 +7,8 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^2.1.0-beta.8"
+  },
+  "dependencies": {
+    "promisescript": "^1.2.0"
   }
 }
