require.context and System.import test cases

--- a/webpack1/dynamic-resolve/package.json
+++ b/webpack1/dynamic-resolve/package.json
@@ -6,6 +6,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "bundle-loader": "^0.5.4",
     "webpack": "^1.13.1"
   },
   "dependencies": {
